--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -56,7 +56,7 @@
         </div>
 
         <div class="navbar-nav pd-1nav-bg-color ms-auto">
-          <a class="nav-link pd-1 btn btn-primary" href="/listings/new">+Add your place</a>
+          <a class="nav-link pd-1 btn btn-primary" href="/listings/new">+Add Destination</a>
           <% if(!currUser) {%>
             <a class="nav-link pd-1 btn btn-primary" href="/signup"><b>SignUp</b></a>
             <a class="nav-link pd-1 btn btn-primary" href="/login"><b>Login</b></a>
