--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -109,7 +109,7 @@
                     <div class="card listing-card col ">
                         <img src="<%=listing.image.url %>" class="card-img-top" alt="listing_image"
                             style="height:20rem;">
-                        <div class="card-img-overlay">abc</div>
+                        <div class="card-img-overlay">STD</div>
                         <div class="card-body">
                             <p class="card-text">
                                 <b>
