--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -24,23 +24,26 @@
     font-size: 1rem;
   }
 
-  @media  (max-width: 413px) {
+  @media  (max-width: 768px) {
     .container-fluid{
       font-weight: 700;
       z-index: 1;
-    
     }
        .pd-1{
-        background-color: rgb(134, 120, 236);
+        background-color: rgb(231, 19, 242);
         border-radius: 3px;
       padding:10px 10px;
+      
        }
+  }
+  .fa-solid{
+    color:red;
   }
 </style>
 
 <nav  class="navbar navbar-expand-md bg-body-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/listings"><i class="fa-regular fa-compass"></i></a>
+      <a class="navbar-brand" href="/listings"><i class="fa-solid fa-house"></i></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup">
         <span class="navbar-toggler-icon"></span>
       </button>
