--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -33,61 +33,56 @@
     }
 
     @media  (max-width: 413px) {
-        #filters div:nth-child(2n){
+        #filters {
         display: none;
-      }
-   }
+ 
+   }}
 </style>
     
-        <div id="filters" class=" ">
-            <div class="filter">
-               <div> <i class="fa-solid fa-fire"></i></div>
-                 <p> Trending</p>
-            </div>
-            <div class="filter">
-                <div> <i class="fa-solid fa-bed"></i></div>
-                  <p> Rooms</p>
-             </div>
-             <div class="filter">
-                <div> <i class="fa-solid fa-mountain-city"></i></div>
-                  <p> Iconic Cities</p>
-             </div>
-             <div class="filter">
-                 <div> <i class="fa-solid fa-mountain"></i></div>
-                   <p> Mountains</p>
-              </div><div class="filter">
-                <div> <i class="fa-brands fa-fort-awesome"></i></div>
-                  <p> Castles</p>
-             </div>
-             <div class="filter">
-                 <div> <i class="fa-solid fa-person-swimming"></i></div>
-                   <p> Amazing Pool</p>
-              </div>
-              <div class="filter">
-                 <div> <i class="fa-solid fa-campground"></i></div>
-                  <p> Camping</p>
-             </div>
-             <div class="filter">
-                 <div> <i class="fa-brands fa-cow"></i></div>
-                  <p> Farms</p>
-             </div>
-             <div class="filter">
-                  <div> <i class="fa-regular fa-snowflake"></i></div>
-                  <p> Arctic</p>
-             </div>
-             <div class="filter">
-                <div> <i class="fa-solid fa-igloo"></i></div>
-                 <p> Domes</p>
-            </div>
-            <div class="filter">
-                 <div> <i class="fa-solid fa-ship"></i></div>
-                 <p> Boats</p>
-            </div>
-            <div class="filter">
-                <div> <i class="fa-brands fa-cow"></i></div>
-                 <p> Farms</p>
-            </div>
-             
+    
+<div id="filters" class="">
+    <div class="filter">
+       <div> <i class="fa-solid fa-fire"></i></div>
+         <p> Trending</p>
+    </div>
+    <div class="filter">
+        <div> <i class="fa-solid fa-bed"></i></div>
+          <p> Rooms</p>
+     </div>
+     <div class="filter">
+        <div> <i class="fa-solid fa-mountain-city"></i></div>
+          <p> Iconic Cities</p>
+     </div>
+     <div class="filter">
+         <div> <i class="fa-solid fa-mountain"></i></div>
+           <p> Mountains</p>
+      </div><div class="filter">
+        <div> <i class="fa-solid fa-dumbbell"></i></div>
+          <p> Gym</p>
+     </div>
+     <div class="filter">
+         <div> <i class="fa-solid fa-person-swimming"></i></div>
+           <p> Amazing Pool</p>
+      </div>
+      <div class="filter">
+         <div> <i class="fa-solid fa-campground"></i></div>
+          <p> Camping</p>
+     </div>
+    
+     <div class="filter">
+          <div> <i class="fa-solid fa-snowflake"></i></div>
+          <p> Arctic</p>
+     </div>
+     <div class="filter">
+        <div> <i class="fa-solid fa-igloo"></i></div>
+         <p> Domes</p>
+    </div>
+    <div class="filter">
+         <div> <i class="fa-solid fa-ship"></i></div>
+         <p> Boats</p>
+    </div>
+  
+
 
 
 
