--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -2,7 +2,7 @@
 <div class="row mt-3">
   <div class="col-8 offset-2" >
     <body>
-      <h3>Edit your Listing</h3>
+      <h3>Update your place</h3>
       <form enctype="multipart/form-data" class="needs-validation" novalidate method="POST" action="/listings/<%=listing._id %>/?_method=PUT">
         
         <div class="mb-3">
@@ -61,7 +61,7 @@
             
           
           
-           <button class="btn btn-dark edit-btn">Edit</button>
+           <button class="btn btn-dark edit-btn">Save</button>
            <br>
            <br>
       </form>
